# learningRust

./: .gitignore  README.md
OOP/: notes.txt
OOP/avg_collection/: Cargo.toml
OOP/gui_example_static/: Cargo.toml
OOP/type_vs_trait/: Cargo.toml
array_access/src/: main.rs
async_programming/: notes.txt
async_programming/mixing_threads_and_async/: Cargo.toml
async_programming/stream/: Cargo.toml
closures/: notes.txt  test_closures  test_closures.rs
closures/adding_one/: Cargo.toml
closures/filter_shoes/: Cargo.toml
enums/: enum_data_directly
error_handling/: out_of_range  panic_at_the  result_testing
fearless_concurrency/: notes.txt
fibonacci/src/: main.rs
final_project/: notes.txt
first_word/: main  main.rs
floating_point/: addition_test  addition_test.rs
generic_types_traits_and_lifetimes/: point.rs
hash_maps/: employees  employees.rs  main.rs  median_and_mode  median_and_mode.rs  testing_entry.rs  testing_order
macros/: notes.txt
match/: matchin  matchin.rs  the_placeholder  the_placeholder.rs
modding_borrowed/: Cargo.toml
mutable_ref/: Cargo.toml
options/: plus_one  plus_one.rs
other_shenanigans/: todo.txt
other_shenanigans/crud-api/: Cargo.toml  dev.db
other_shenanigans/crud-api/.cargo/: config.toml
other_shenanigans/crud-api/src/: error.rs  handlers.rs  main.rs  models.rs
ownership_testing/: Cargo.toml
patterns_and_matching/: notes.txt
smart_pointers/: notes.txt
strings/: notes.txt  s3  s3.rs  updating_strings
structs/: main  main.rs
temps/: Cargo.toml
testing_immute/: Cargo.toml
traits/: notes.txt
(+237 files in other folders)
